--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <title>Login - DevMentor BR</title>
@@ -26,17 +26,26 @@
           <legend>Ou entre com sua rede social</legend>
           <button class="google-login">
             <a href="https://www.google.com.br">
-              <img src="https://cdn-icons-png.flaticon.com/512/355/355998.png" alt="Google logo">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/355/355998.png"
+                alt="Google logo"
+              />
             </a>
           </button>
           <button class="facebook-login">
             <a href="https://www.facebook.com.br">
-              <img src="https://cdn-icons-png.flaticon.com/512/3670/3670124.png" alt="Facebook logo">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/3670/3670124.png"
+                alt="Facebook logo"
+              />
             </a>
           </button>
           <button class="twitter-login">
             <a href="https://www.twitter.com.br">
-              <img src="https://cdn-icons-png.flaticon.com/512/3670/3670211.png" alt="Twitter logo">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/3670/3670211.png"
+                alt="Twitter logo"
+              />
             </a>
           </button>
         </fieldset>
